add h1, img tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title> Github</title>
 </head>
-<body>
+<body>	
+	<h1> satauri 1 </h1>
+	<img src="">
 	<p> Test1 </p>
 
 	<h3> satauri </h3>
